--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -467,3 +467,11 @@ The use of ensemble methods is also prominent for price prediction, where techni
 When it comes to portfolio optimisation, \acrshort{drl} algorithms are particularly better suited as they address the sequential decision making nature of portfolio management. Unlike traditional \Gls{supervisedlearning} approaches that require labelled data, \acrshort{drl} enables agents to learn optimal investment strategies through direct interaction with market environments. This paradigm allows for the dynamic adjustment of portfolio weights without the need for predefined rules, making it well-suited to capture market non-linearities and adapt to changing conditions. There are numerous \acrshort{drl} algorithms, as outlined in Section \ref{sec:drlalgorithms}, with each being particularly suited to different aspects of the portfolio management process, namely, \acrshort{ddpg} encourages maximum returns, while \acrshort{a2c} reduces the variance. 
 
 Liu et al. (2018) \cite{Liu2018} propose the use of \acrshort{ddpg} for profitable stock trading, where the agent learns to buy, hold and sell stocks based on the historical price data with the goal of maximising the investment return. Their proposal outperforms the \acrfull{djia} and the min-variance portfolio allocation strategies, achieving an annualised return of 25.86\% and a Sharpe ratio of 1.79. Their work is further extended by Liu (2020) \cite{Liu2020} by proposing a Python library, FinRL, which provides a comprehensive framework for developing and evaluating \acrshort{drl} algorithms in the context of financial trading. Although the library provides implementation for numerous \acrshort{drl} algorithms including \acrshort{dqn}, \acrshort{a2c} and \acrshort{sac}, they evaluate the performance of \acrshort{td3} and \acrshort{ddpg} on the \acrfull{djia} constituents for the task of portfolio allocation. Moreover, an interesting aspect of their work is the incorporation of the turbulence index, that measures extreme asset price fluctuations, to control portfolio risk. Furthermore, portfolio management has not only been explored on traditional asset, but rather Jiang et al. (2016) \cite{Jiang2016} explore \acrshort{drl} for portfolio management in the context of cryptocurrencies and Zhang et al. (2019) \cite{Zhang2019} apply it to future contracts. 
+
+Despite the significant applications of \acrshort{drl} in portfolio optimisation, the field still faces significant challenges that prevent its widespread adoption. There are numerous \acrshort{drl} algorithms and it is difficult to select a particular one as their strengths are suited to different market conditions. In relation to market conditions, identifying the correct objective function that guarantees both efficiency and accuracy remains an open research question. Finally, one of the most significant concerns is the lack of transparency of \acrshort{ml} models, which exhibit black box behaviours. If there is to be widespread use of these models in the financial field, great strides must be made in the area of explainability. 
+
+Barriedo et al. (2020) \cite{BarredoArrieta2019} provide a comprehensive overview of \acrfull{xai} methods and their need in different fields. In 2024, the \acrlong{eu} has passed the Regulation 2024/1689, also referred to as \acrshort{ai} Act \cite{AIAct2024}. The goal is to ensure that the \acrshort{ai} systems used in the \acrlong{eu} are safe, transparent and traceable. Given the regulatory requirements with regard to \acrshort{ai}, it is crucial for financial institutions to adopt techniques that enhance the interpretability and traceability of \acrshort{ml} models.
+
+The application of \acrshort{xai} methods has gained traction in the financial domain, with notable use cases including stock market trend prediction \cite{Mandeep2022} and auditing \cite{Zhang2022}. However, despite examples of \acrshort{xai} methods in finance, there is still a lack of research in \acrshort{drl}. An interesting study was conducted by González Cortés et al. (2024) \cite{Cortes2024}, whose authors address the black box behaviour of \acrshort{drl} models by proposing an intrinsically transparent algorithm. They use \acrfull{saac} enhanced with an attention-layered \acrshort{lstm} to determine the importance of the input features. Although their results show an improvement in performance compared against two variants of the Markowitz model, the model does not scale well with the number of assets in the portfolio, as the attention mechanism is independent for each stock.
+
+Another recent study by de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025} proposes a post-hoc explainability methods to interpret the decisions of \acrshort{ppo} agent optimised for portfolio managament. They implement three model agnostic explainability techniques: \acrshort{shap}, \acrshort{lime} and feature importance analysis. Albeit their proposal's ability to provide insights into the model's decision-making process, to perform the explainability, they do not use the model prediction function directly but instead implement a surrogate model to approximate the decision boundary of the PPO agent.
