--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -195,3 +195,5 @@
 \newacronym{mape}{MAPE}{Mean Absolute Percentage Error}
 \newacronym{pca}{PCA}{Principal Component Analysis}
 \newacronym{djia}{DJIA}{Dow Jones Industrial Average}
+\newacronym{eu}{EU}{European Union}
+\newacronym{saac}{SAAC}{Synchronous Advantage Actor Critic}
