--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -450,6 +450,22 @@
   url       = {https://www.jstor.org/stable/2975974},
   year      = {1952}
 }
+@article{Millea2021,
+  abstract  = {Deep reinforcement learning (DRL) has achieved significant results in many machine learning (ML) benchmarks. In this short survey, we provide an overview of DRL applied to trading on financial markets with the purpose of unravelling common structures used in the trading community using DRL, as well as discovering common issues and limitations of such approaches. We include also a short corpus summarization using Google Scholar. Moreover, we discuss how one can use hierarchy for dividing the problem space, as well as using model-based RL to learn a world model of the trading environment which can be used for prediction. In addition, multiple risk measures are defined and discussed, which not only provide a way of quantifying the performance of various algorithms, but they can also act as (dense) reward-shaping mechanisms for the agent. We discuss in detail the various state representations used for financial markets, which we consider critical for the success and efficiency of such DRL agents. The market in focus for this survey is the cryptocurrency market; the results of this survey are two-fold: firstly, to find the most promising directions for further research and secondly, to show how a lack of consistency in the community can significantly impede research and the development of DRL agents for trading.},
+  author    = {Adrian Millea and Francisco Guijarro},
+  doi       = {10.3390/DATA6110119},
+  issn      = {2306-5729},
+  issue     = {11},
+  journal   = {Data 2021, Vol. 6, Page 119},
+  keywords  = {based RL,cryptocurrency,deep reinforcement learning,foreign exchange,hierarchy,model,prediction,reward shaping,risk,stock market,trading},
+  month     = {11},
+  pages     = {119},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  title     = {Deep Reinforcement Learning for Trading—A Critical Survey},
+  volume    = {6},
+  url       = {https://www.mdpi.com/2306-5729/6/11/119/htm https://www.mdpi.com/2306-5729/6/11/119},
+  year      = {2021}
+}
 @article{Mnih2013,
   abstract = {We present the first deep learning model to successfully learn control policies directly from high-dimensional sensory input using reinforcement learning. The model is a convolutional neural network, trained with a variant of Q-learning, whose input is raw pixels and whose output is a value function estimating future rewards. We apply our method to seven Atari 2600 games from the Arcade Learning Environment, with no adjustment of the architecture or learning algorithm. We find that it outperforms all previous approaches on six of the games and surpasses a human expert on three of them.},
   author   = {Volodymyr Mnih and Koray Kavukcuoglu and David Silver and Alex Graves and Ioannis Antonoglou and Daan Wierstra and Martin Riedmiller},
