--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -456,9 +456,9 @@ The method works by exploiting the tree structure and the main steps of the algo
 
 \section{Literature Review} \label{sec:literature_review}
 
-The emergence of \acrfull{ml} and its rise in popularity have led to a new research direction in various financial applications, due to \acrshort{ml} algorithms' ability to learn complex patterns from high-dimensional data and adapt to changing market conditions. Particularly, the main approaches in the financial field include the use of \acrlong{dl} and \acrfull{rl} for price trend prediction \cite{Zhang2023} and portfolio optimisation \cite{Millea2021}. 
+The emergence of \acrfull{ml} and its rise in popularity have led to a new research direction in various financial applications, due to its ability to learn complex patterns from high-dimensional data and adapt to changing market conditions. Particularly, the main approaches in the financial field include the use of \acrlong{dl} and \acrfull{rl} for price trend prediction \cite{Zhang2023} and portfolio optimisation \cite{Millea2021}. 
 
-The topic of portfolio optimisation with multiple risky financial assets has been extensively studied and it still poses a challenging task due to the complex and stochastic nature of financial markets. The traditional approaches to portfolio optimisation, such as the \acrfull{mvo} \cite{Markowitz1952}, have been widely used, but they often rely on assumptions that do not hold in practice, such as the normality of returns and the stability of the covariance matrix. As a result, these methods can lead to suboptimal portfolios and poor performance in real-world scenarios.
+The topic of portfolio optimisation with multiple risky financial assets has been extensively studied and it still poses a challenging task due to the complex and stochastic nature of financial markets. Traditional approaches to portfolio optimisation, such as the \acrfull{mvo} \cite{Markowitz1952}, have been widely used, but they often rely on assumptions that do not hold in practice, such as the normality of returns and the stability of the covariance matrix. As a result, these methods can lead to suboptimal portfolios and poor performance in real-world scenarios.
 
 The use of \acrlong{dl} architectures is particularly prominent in the context of price prediction, where deep neural networks are employed to learn complex patterns in historical price data. For instance, \acrfull{lstm} architectures are particularly well-suited for financial time series forecasting due to their ability to capture long-term dependencies and temporal patterns in the data. The performance of these architectures can lead to a \acrfull{mape} as low as 2.72\%, as demonstrated by Chaudhary (2025) \cite{Chaudhary2025}. Shen et al. (2020) \cite{Shen2020} also propose a \acrshort{lstm} architecture for short-term trend prediction. Despite its simple architecture, its main contributions rely on the feature engineering process. The proposal incorporates feature extension, followed by recursive feature elimination and finally, performs \acrfull{pca} to reduce the dimensionality of the input data for the \acrshort{lstm} model. The use of \acrshort{pca} improves the training efficiency of the architecture by 36.8\% \cite{Shen2020}. 
 
